--- a/PSY6422.Rmd
+++ b/PSY6422.Rmd
@@ -1,11 +1,12 @@
 ---
 title: "PSY6422 Final Project"
-author: "Maya Mardania"
+author: "ID 240189002"
 date: "`r Sys.Date()`"
-output: html_document
+output:
+  html_document
 ---
 
-```{r markdown setup, include=FALSE}
+```{r markdown setup, include = FALSE}
 
 knitr::opts_chunk$set(echo = TRUE)
 # Prevents "Error in contrib.url():! trying to use CRAN without setting a mirror" message
@@ -13,43 +14,48 @@ options(repos = c(CRAN = "https://cloud.r-project.org"))
 
 ```
 
-## Topic and Research Question
+# Topic & Research Question
+## How do units of housing supply completed in the last 23 years compare across regions of England?
+Given the current housing crisis and shortage in the UK, I became interested in how different regions of England specifically are performing with their supply of homes. I had a look into available data on gov.uk and the Office for National Statistics and found data on net additional dwellings completed, and on regional population figures. To allow comparisons across regions, I created a per 1000 people figure for a given region at a given year, given that bigger regions will have more housing.
 
-How do units of net housing supply compare across regions of England? Ajusting to regional population.
+# Data
+## Import
 
-## Data
-# Import
-
-```{r library and data importing, include = FALSE, message = FALSE}
+```{r library and data importing, message = FALSE}
 
 #readODS package needed to read the Net Additional Dwellings .ods dataset
 if(!require(readODS)) install.packages("readODS")
 library(readODS)
 ##readxl package needed to read the Regional Population .xlsx dataset
-install.packages("readxl")
+if(!require(readxl)) install.packages("readxl")
 library(readxl)
 
-#Libraries required for data wrangling
-if(!require(dplyr)) install.packages("dplyr")
-library(dplyr)
+#Library required for data wrangling
 if(!require(tidyverse)) install.packages("tidyverse")
-library(tidyverse)
+library(tidyr)
+library(dplyr)
 
-#Required for plotting
+##ggplot2 allows for plotting with ggplot
+if(!require(ggplot2)) install.packages("ggplot2")
+library(ggplot2)
+##plotly allows interactivity  from ggplot plots. I like the use of plot zooming and custom hover text which is why plotly was used
+if(!require(plotly)) install.packages("plotly")
+library(plotly)
 
 #Adding data to a data frame
-#Ensure data names match what I've named them below and are stored in a "data" file if you are downloading from sources yourself!
+#Ensure data names match what I've named them below and are stored in a "data" file if you are downloading from sources yourself
 data_dwell <- read_ods("data/raw_netadditionaldwellings.ods", sheet = 5)
-data_pop <- read_xlsx("data/raw_population.xlsx", sheet = 11)
+data_pop <- read_xlsx("data/raw_population.xlsx", sheet = 11) 
 
-#See our new imported datasets are what we need
-View(data_dwell)
-View(data_pop)
+#See new imported data sets are what we need
+head(data_dwell)
+head(data_pop)
+#Will be merging these data sets so we get a figure of the number of new housing units relative to that region's population for a given year, by 1000 people to allow regional comparisons
 #Data needs to match by Year and Region, therefore need to ensure relevant wrangling is completed...
 
 ```
 
-# Wrangle: Net Additional Dwellings data
+## Wrangle: Net Additional Dwellings data
 
 ```{r wrangle net dwellings data, include = FALSE, message = FALSE}
 # Wrangle: Net Additional Dwellings data
@@ -104,13 +110,12 @@ data_dwell$Year <- as.numeric(data_dwell$Year)
 data_dwell$Net_Additional_Dwellings <- as.numeric(data_dwell$Net_Additional_Dwellings)
 
 #How does it look?
-View(data_dwell)
-#Numbers have shifted to the right indicating they are now numeric
+print(data_dwell)
 #Looks good!
 
 ```
 
-# Plot: Net Additional Dwellings data
+## Plot: Net Additional Dwellings data
 
 ```{r plot Net Additional Dwellings data, include = FALSE, message = FALSE}
 
@@ -130,7 +135,7 @@ print(plot_dwell)
 
 ```
 
-# Wrangle: Population data
+## Wrangle: Population data
 
 ```{r wrangle population data, include = FALSE, message = FALSE}
 
@@ -181,25 +186,33 @@ is.na(data_pop)
 data_pop$Year <- as.numeric(data_pop$Year)
 data_pop$Population <- as.numeric(data_pop$Population)
 
-View(data_pop)
+print(data_pop)
+
 ```
 
-# Plot: Population
+## Plot: Population
 
 ```{r population plot, include = FALSE, message = FALSE}
 
 plot_pop <- ggplot(data_pop, aes(x = Year, y = Population, group = Region, colour = Region)) +
   geom_line() +
   geom_point() +
+  theme(
+    plot.background = element_rect(fill = "lightblue", color = NA),
+    panel.background = element_rect(fill = "white", color = NA),
+    panel.grid.major = element_line(color = "gray90"),
+    panel.grid.minor = element_line(color = "gray95")
+  ) +
   labs(title = "Population by Region, 2011-2023", 
        x = "Year", 
        y = "Population") +
   scale_x_continuous(breaks = seq(2011, 2023))
 
-plot_pop
+print(plot_pop)
+
 ```
 
-# Wrangle: Merging datasets
+## Wrangle: Merging datasets
 
 ```{r wrangling both datasets and merging, include = FALSE, message = FALSE}
 
@@ -226,45 +239,49 @@ data_pop <- data_pop %>%
 #We can now create a new data frame where new homes are adjusted by population for each region
 
 #merging with Region and Year labels remaining
-data_merge <- merge(data_dwell, data_pop, by.x = c("Region", "Year"), by.y = c("Region", "Year"))
+data_final <- merge(data_dwell, data_pop, by.x = c("Region", "Year"), by.y = c("Region", "Year"))
 
 #Check all 9 regions are here
-unique(data_merge$Region)
+unique(data_final$Region)
 #yep
 #Check all years we're interested in are accounted for
-unique(data_merge$Year)
+unique(data_final$Year)
 #Yep
 #ANy data lost in the merge, resulting in NA values?
-is.na(data_merge)
+is.na(data_final)
 #All FALSE, looks good to me!
 
-View(data_merge)
+#view the data
+print(data_final)
 
 #make new columns numeric for plotting
-data_merge$Year <- as.numeric(data_merge$Year)
-data_merge$Net_Additional_Dwellings <- as.numeric(data_merge$Net_Additional_Dwellings)
-data_merge$Population <- as.numeric(data_merge$Population)
+data_final$Year <- as.numeric(data_final$Year)
+data_final$Net_Additional_Dwellings <- as.numeric(data_final$Net_Additional_Dwellings)
+data_final$Population <- as.numeric(data_final$Population)
 
 # Calculate the Population/Houses*1000 ratio, create new column for figures
-data_merge$Dwell_By_Pop <- ((data_merge$`Net_Additional_Dwellings` / data_merge$`Population`)*1000)
+data_final$Dwell_By_Pop <- ((data_final$`Net_Additional_Dwellings` / data_final$`Population`)*1000)
 
 #see the new column
-View(data_merge)
+View(data_final)
 
 ```
 
-
-
 # Final Plot for Assessment
 
-```{r fig.width=11, fig.height=5}
+```{r final plot, echo = FALSE, message = FALSE}
 
-#plot it all!
-plot_merge <- ggplot(data_merge, aes(x = Year, y = Dwell_By_Pop, group = `Region`, colour = `Region`,
-                                    text = paste(Region, "|", Year,
-                                                 "<br>Population:", format(Population, big.mark = ","),
-                                                 "<br>Completed Builds:", format(Net_Additional_Dwellings, big.mark = ","),
-                                                 "<br><b>Homes completed per 1000 people:</b>", round(Dwell_By_Pop, 3)))) +
+# Plot it all!
+plot_final <- ggplot(data_final, aes(
+  x = Year, 
+  y = Dwell_By_Pop, 
+  group = `Region`, 
+  colour = `Region`, 
+  text = paste(
+    Region, "|", Year, 
+    "<br>Population:", format(Population, big.mark = ","), 
+    "<br>Completed Builds:", format(Net_Additional_Dwellings, big.mark = ","), 
+    "<br><b>Homes completed per 1000 people:</b>", round(Dwell_By_Pop, 2)))) +
   geom_line() +
   geom_point() +
   labs(title = "New Homes Completed to Population by English Region, 2011-2023", 
@@ -274,38 +291,47 @@ plot_merge <- ggplot(data_merge, aes(x = Year, y = Dwell_By_Pop, group = `Region
     breaks = seq(2011, 2023)) +
   scale_y_continuous(
     breaks = seq(1, 5.5, by = 0.25),
-      limits = c(1, 5.5))
-
-plot_merge
-
-library(plotly)
-
-## Convert ggplot to plotly & ensure custom hover text is shown
-plot_interactive_ratio <- ggplotly(plot_merge, tooltip = "text") %>%
-  layout(legend = list(
-    orientation = "h",  # Horizontal layout for the legend
-      x = 0.5,            # Center the legend horizontally
-      y = 1.1,            # Position above the plot area (adjust as needed)
-      xanchor = "center", # Align the legend box horizontally to its center
-      yanchor = "bottom"  # Align the legend box vertically to its bottom
-    )
+      limits = c(1, 5.5)) +
+  theme(
+    panel.background = element_rect(fill = "transparent", color = NA),  # Transparent panel background
+    plot.background = element_rect(fill = "transparent", color = NA),  # Transparent plot background
+    axis.ticks = element_line(color = "grey"),                          # Grey ticks
+    panel.grid.major = element_line(color = "grey90"),                  # Optional: Light grey gridlines
+    panel.grid.minor = element_line(color = "grey95")                   # Optional: Lighter grey minor gridlines
   )
-  
-## Show the interactive plot
-plot_interactive_ratio
+
+# Convert ggplot to plotly for interactivity & allow custom hover text to show
+plot_final <- ggplotly(plot_final, tooltip = "text")
+
+# Show the interactive plot
+plot_final
+
 ```
 
 
-## Conclusions
+# Conclusions
 ## Limitations & Future ideas
 
+Although my project offers an interesting insight into housing supply differences across English regions, it of course overlooks the contextual and political factors involved in housing supply. Economic conditions (e.g., unemployment, income levels), government policies (e.g., housing subsidies, planning permissions/ regulations) and details regarding types of housing or population density are not considered.
 
-## References
+My initial idea for this project was to use data on affordable units of housing available regionally and find proportions of net housing that are affordable, to see where in England there are the most affordable options for housing. This fell short when I realised the affordable housing data is only available as a gross figure (i.e. not taking into account any losses of affordable housing), therefore any data presented would be misleading. This would be a really interesting future idea given the net data is published. There is some "Official Statistics in Development" only on affordable housing for rent, if interested (see references).
 
-All data was extracted from the Office of National Statistics.
+# References
 
-<b>Net Additional Dwellings data</b>: Table 118: annual net additional dwellings and components, England and the regions (ODS, 54KB) -<br> <a href="https://www.gov.uk/government/statistical-data-sets/live-tables-on-net-supply-of-housing#live-tables"target="_blank">https://www.gov.uk/government/statistical-data-sets/live-tables-on-net-supply-of-housing#live-tables</a> (Updated:
-28 November 2024)
+All data was extracted from the Office for National Statistics and from gov.uk.
 
-<b>Population estimates data</b>: Mid-2023: 2023 local authority boundaries edition of this dataset edition of this dataset (xlsx, 813.1KB) -<br> <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/populationandmigration/populationestimates/datasets/estimatesofthepopulationforenglandandwales">https://www.ons.gov.uk/peoplepopulationandcommunity/populationandmigration/populationestimates/datasets/estimatesofthepopulationforenglandandwales</a> (Released: 15 July 2024)
+<b>Net Additional Dwellings data:</b> Table 118: annual net additional dwellings and components, England and the regions (ODS, 54KB) -<br> <a href="https://www.gov.uk/government/statistical-data-sets/live-tables-on-net-supply-of-housing#live-tables"target="_blank">https://www.gov.uk/government/statistical-data-sets/live-tables-on-net-supply-of-housing#live-tables</a> (Updated: 28 November 2024)
+
+Involvement from:
+Ministry of Housing, Communities and Local Government, 
+Ministry of Housing, Communities & Local Government (2018 to 2021),
+Department for Levelling Up, Housing and Communities
+
+<b>Population estimates data:</b> Mid-2023: 2023 local authority boundaries edition of this dataset edition of this dataset (xlsx, 813.1KB) -<br> <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/populationandmigration/populationestimates/datasets/estimatesofthepopulationforenglandandwales">https://www.ons.gov.uk/peoplepopulationandcommunity/populationandmigration/populationestimates/datasets/estimatesofthepopulationforenglandandwales</a> (Released: 15 July 2024)
+
+<b>Unused data:</b> Links for anyone interested in affordable data sets mentioned:
+<br><a href="https://www.gov.uk/government/statistical-data-sets/live-tables-on-affordable-housing-supply">https://www.gov.uk/government/statistical-data-sets/live-tables-on-affordable-housing-supply</a>
+<br><a href="
+https://assets.publishing.service.gov.uk/media/65c0b5dec43191000d1a451f/Net_Affordable_Housing_for_Rent.ods/preview">
+https://assets.publishing.service.gov.uk/media/65c0b5dec43191000d1a451f/Net_Affordable_Housing_for_Rent.ods/preview</a>
 
